--- a/MoveItClientExample/src/main/java/com/github/wshackle/moveitcontrol/MoveItControlJFrame.form
+++ b/MoveItClientExample/src/main/java/com/github/wshackle/moveitcontrol/MoveItControlJFrame.form
@@ -40,6 +40,7 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="title" type="java.lang.String" value="Java MoveIt  1/ ROS 1 Client"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="menuBar" type="java.lang.String" value="jMenuBar1"/>
